--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,20 @@
     transform: rotate(360deg);
   }
 }
+
+img {
+  width: 100px;
+  height: 100px;
+}
+
+li {
+  
+}
+
+.app-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  flex-direction: column;
+}
